src/views/tutorial-view/components/featured-in-collections/featured-in-collections.module.css
.heading {
  margin: 0;
  padding: 0;
  font-weight: var(--token-typography-font-weight-semibold);
  font-family: var(--token-typography-display-200-font-family);
  font-size: var(--token-typography-display-200-font-size);
  line-height: var(--token-typography-display-200-line-height);
  letter-spacing: var(--token-typography-display-200-letter-spacing);
}

.listRoot {
  /* align-items: stretch; */
  display: flex;
  flex-wrap: wrap;
  gap: 24px;
  list-style: none;

  /**
   * Note: !important is necessary here as we're within a content container
   * that uses nested generic selectors to style <ul />.
   * TODO: convert the nested generic selectors to MDX components.
   * Asana task:
   * https://app.asana.com/0/1201987349274776/1201653123138729/f
   */
  margin: 0 !important;
  padding: 16px 0 0 0 !important;
}

.listItem {
  flex-grow: 1;
  min-width: 240px;
  width: 0;
  margin-bottom: 0 !important;
}

.listItemCard {
  height: 100%;
}

